# mtn-huts

./: .gitignore  Dockerfile  LICENSE  README.adoc  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
main/: app.yaml  babel.cfg  config.py  main.py  requirements.txt
main/huts/: .~lock.huts_modified.ods#  GPSConverter.py  Hut.py  HutDescription.py  Huts.py  __init__.py  all_huts.kml  free_huts.kml  huts.xls  huts_modified.ods
main/static/: script.js  style.css
main/static/icons/: README  create_icons.py
main/templates/: admin.html  base.html  hut.html  index.html  legend.html  legend_modal.html  map.html
main/translations/de/LC_MESSAGES/: messages.po
main/translations/fr/LC_MESSAGES/: messages.po
main/translations/it/LC_MESSAGES/: messages.po
