[tool.poetry]
name = "mtn-huts-app"
version = "0.1.0"
description = "Show swiss mountain huts"
authors = ["tb <tb@wodore.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.0.0"
flask-caching = "^2.1.0"
flask-babel = "^4.0.0"
simplekml = "^1.3.6"
pandas = "^2.1.1"
bs4 = "^0.0.1"
requests = "^2.31.0"
xmltodict = "^0.13.0"
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
